--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,14 +1,14 @@
 <h1>About</h1>
-<p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
-<h4>利用 cmsimde 建立靜態網誌方法:</h4>
-<p>1. 在 github 建立倉儲, git clone 到近端</p>
-<p>2. 參考 <a href="https://github.com/mdecourse/newcms">https://github.com/mdecourse/newcms</a>, 加入除了 cmsimde 目錄外的所有內容</p>
-<p>以 git submodule add <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> cmsimde</p>
-<p>建立 cmsimde 目錄, 並從 github 取下子模組內容.</p>
-<p>3.在近端維護時, 更換目錄到倉儲中的 cmsimde, 以 python wsgi.py 啟動近端網際伺服器.</p>
-<p>動態內容編輯完成後, 以 generate_pages 轉為靜態內容, 以 git add commit 及 push 將內容推到遠端.</p>
-<p>4. 之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</p>
-<p>git clone --recurse-submodules <a href="https://github.com/mdecourse/newcms.git">https://github.com/mdecourse/newcms.git</a></p>
-<h1>Develop</h1>
-<p><a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 的開發, 可以在一個目錄中放入 cmsimde, 然後將 up_dir 中的內容放到與 cmsimde 目錄同位階的地方, 使用 command 進入 cmsimde 目錄, 執行 python wsgi.py, 就可以啟動, 以瀏覽器 https://localhost:9443 就可以連接, 以 admin 作為管理者密碼, 就可以登入維護內容.</p>
-<p>cmsimde 的開發採用 Leo Editor, 開啟 cmsimde 目錄中的 cmsimde.leo 就可以進行程式修改, 結束後, 若要保留網際內容, 只要將 cmsimde 外部的內容倒回 up_dir 目錄中即可後續對 cmsimde 遠端倉儲進行改版.</p>
+<p>小組成員:</p>
+<p><a href="https://github.com/40823204/cd2021">40823204 repo</a>/<a href="https://40823204.github.io/cd2021/content/index.html">40823204 site</a></p>
+<p><a href="https://github.com/40823205/cd2021">40823205 repo</a>/<a href="https://40823205.github.io/cd2021/content/index.html">40823205 site</a></p>
+<p><a href="https://github.com/40823220/cd2021">40823220 repo</a>/<a href="https://40823220.github.io/cd2021/content/index.html">40823220 site</a></p>
+<p><a href="https://github.com/40823221/cd2021">40823221 repo</a>/<a href="https://40823221.github.io/cd2021/content/index.html">40823221 site</a></p>
+<p><a href="https://github.com/40823228/cd2021">40823228 repo</a>/<a href="https://40823228.github.io/cd2021/content/index.html">40823228 site</a></p>
+<p><a href="https://github.com/40823237/cd2021">40823237 repo</a>/<a href="https://40823237.github.io/cd2021/content/index.html">40823237 site</a></p>
+<p><a href="https://github.com/40823242/cd2021">40823242 repo</a>/<a href="https://40823242.github.io/cd2021/content/index.html">40823242 site</a></p>
+<p><a href="https://github.com/40823250/cd2021">40823250 repo</a>/<a href="https://40823250.github.io/cd2021/content/index.html">40823250 site</a></p>
+<p><a href="https://github.com/40832244/cd2021">40832244 repo</a>/<a href="https://40832244.github.io/cd2021/content/index.html">40832244 site</a></p>
+<p></p>
+<h1>每周進度</h1>
+<h2>w10</h2>
