--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -11,4 +11,35 @@
 <p><a href="https://github.com/40832244/cd2021">40832244 repo</a>/<a href="https://40832244.github.io/cd2021/content/index.html">40832244 site</a></p>
 <p></p>
 <h1>每周進度</h1>
+<h2>w9</h2>
+<p><span style="color: #ff0000;">資料整理</span></p>
+<h3>stage1</h3>
+<p><span style="color: #ff0000;"><strong>bg14</strong></span></p>
+<p>專題主題:<b>升降平台</b></p>
+<p><b>組員/分工:</b></p>
+<p><b>40823228/</b></p>
+<p><b>40823242/</b></p>
+<p><b></b></p>
+<p><b>主題簡述:</b></p>
+<p><b>在工地裡，經常需要在高處實施作業，可是 目前在外面看到的作業平台都是用組裝式 的，不僅延長工作時間，在搭建過程，也有 極大的掉落風險，所以我們小組設計出”油 壓式升降平台”，不僅方便攜帶，也大幅減 少風險與搭建平台的作業時間。</b></p>
+<p><b>---------------------------------------</b></p>
+<p><span style="color: #ff0000;"><strong>bg24</strong></span></p>
+<p><b>專題主題:升降裝置</b></p>
+<p><b>組員/分工:</b></p>
+<p><b>40823204/CoppeliaSim 測試、分組網站、PDF 製 作、reveal 簡報</b></p>
+<p><b>40823220/繪圖(Inventor)、reveal 簡報 </b></p>
+<p><b></b></p>
+<p><b>主題簡述:</b></p>
+<p><b>方便搬運重物：大型可用來載人、小型可用在各 種自動化機械。</b></p>
+<p><b>---------------------------------------</b></p>
+<p><span style="color: #ff0000;"><b>bg16</b></span></p>
+<p><b>專題主題:氣動馬達</b></p>
+<p><b>組員/分工:</b></p>
+<p><b>40823221/<span>Coppelia模擬、PDF製作、合併倉儲及網站</span></b></p>
+<p><b>40823237/<span>繪製圖檔、reveal製作、倉儲推送及維護</span></b></p>
+<p><b></b></p>
+<p><b>主題簡述:</b></p>
+<p><b>因為對汽車作動原理有些許興趣，所以以引擎 的活塞與皮帶輪關係做變化。 </b></p>
+<p><b></b></p><h3>stage2</h3>
+<p></p>
 <h2>w10</h2>
