--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -17,8 +17,8 @@
 <p><span style="color: #ff0000;"><strong>bg14</strong></span></p>
 <p>專題主題:<b>升降平台</b></p>
 <p><b>組員/分工:</b></p>
-<p><b>40823228/</b></p>
-<p><b>40823242/</b></p>
+<p><b>40823228/成品零件繪製、模擬、報告影片</b></p>
+<p><b>40823242/初稿零件繪製、模擬、報告影片</b></p>
 <p><b></b></p>
 <p><b>主題簡述:</b></p>
 <p><b>在工地裡，經常需要在高處實施作業，可是 目前在外面看到的作業平台都是用組裝式 的，不僅延長工作時間，在搭建過程，也有 極大的掉落風險，所以我們小組設計出”油 壓式升降平台”，不僅方便攜帶，也大幅減 少風險與搭建平台的作業時間。</b></p>
@@ -41,5 +41,23 @@
 <p><b>主題簡述:</b></p>
 <p><b>因為對汽車作動原理有些許興趣，所以以引擎 的活塞與皮帶輪關係做變化。 </b></p>
 <p><b></b></p><h3>stage2</h3>
-<p></p>
-<h2>w10</h2>
+<p>bg12</p>
+<p>專題主題:<span>自動門</span><span>開門機構</span></p>
+<p>組員/分工:</p>
+<p>40823221/<span>網頁編輯、程式模擬、PDF簡報製作</span></p>
+<p>40823237/<span>繪製圖檔、程式模擬、Reveal製作</span></p>
+<p>40823250/<span>繪製圖檔、網頁編輯</span></p>
+<p>40832244/<span>網頁編輯</span></p>
+<p><br/>主題簡述:</p>
+<p>剛開始會想做項專題的原因是因為在去 年發生了全世界的病毒感染，所以我們 想過類似門或是其他需要人體接觸的地 方盡量能讓人不用用手碰觸。 後來會做此設計也有對接觸做設計，所 以我們將感應器裝在門的周圍，是他可 以自動開啟。</p>
+<p>---------------------------------------</p>
+<p>bg14</p>
+<p>專題主題:<strong>省力搬運機</strong></p>
+<p>組員/分工:</p>
+<p>40823204/SolidWorks 零件繪製、模擬、報告影片</p>
+<p>40823205/Inventor 零件繪製、模擬、報告影片</p>
+<p>40823220/<span>Inventor 零件繪製、模擬、報告影片</span></p>
+<p>40832228/<span>PDF 製作、模擬、報告影片</span></p>
+<p><span>40823242/應力分析、模擬、報告影片</span></p>
+<p><br/>主題簡述:</p>
+<p>在工地裡,經常需要用到台車搬運東西,例如裝著水泥的箱子,如果是要靠人力搬運的話,不僅會造成工作效率的減少,也會使搬運人員的體力大量消耗,所以討論過後,我們小組決定設計”省力搬運機”,不僅解決搬運問題,也大幅地提高工作效率與人員體力的損耗。</p><h2>w10</h2>
