--- a/content/stage2.html
+++ b/content/stage2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html>
         <head>
-        <title>CMSiMDE</title>
+        <title>stage3-bg5</title>
         <meta charset="utf-8">
 <meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li class='has-children'><a href='w9.html'>w9</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></ul><li><a href='w10.html'>w10</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li class='has-children'><a href='w9.html'>w9</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></ul><li><a href='w10.html'>w10</a></li></ul><li><a href='影片.html'>影片</a></li>
                       </ul>
                 </nav>
               </div>
@@ -135,7 +135,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">stage1 << <a href='stage1.html'>Previous</a> <a href='w10.html'>Next</a> >> w10<br /><h1>stage2</h1>
-<p>bg12</p>
+<p><span style="color: #ff0000;">bg12</span></p>
 <p>專題主題:<span>自動門</span><span>開門機構</span></p>
 <p>組員/分工:</p>
 <p>40823221/<span>網頁編輯、程式模擬、PDF簡報製作</span></p>
@@ -145,7 +145,7 @@ img.add_border {
 <p><br/>主題簡述:</p>
 <p>剛開始會想做項專題的原因是因為在去 年發生了全世界的病毒感染，所以我們 想過類似門或是其他需要人體接觸的地 方盡量能讓人不用用手碰觸。 後來會做此設計也有對接觸做設計，所 以我們將感應器裝在門的周圍，是他可 以自動開啟。</p>
 <p>---------------------------------------</p>
-<p>bg14</p>
+<p><span style="color: #ff0000;">bg14</span></p>
 <p>專題主題:<strong>省力搬運機</strong></p>
 <p>組員/分工:</p>
 <p>40823204/SolidWorks 零件繪製、模擬、報告影片</p>
@@ -154,7 +154,8 @@ img.add_border {
 <p>40832228/<span>PDF 製作、模擬、報告影片</span></p>
 <p><span>40823242/應力分析、模擬、報告影片</span></p>
 <p><br/>主題簡述:</p>
-<p>在工地裡,經常需要用到台車搬運東西,例如裝著水泥的箱子,如果是要靠人力搬運的話,不僅會造成工作效率的減少,也會使搬運人員的體力大量消耗,所以討論過後,我們小組決定設計”省力搬運機”,不僅解決搬運問題,也大幅地提高工作效率與人員體力的損耗。</p><br />stage1 << <a href='stage1.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
+<p>在工地裡,經常需要用到台車搬運東西,例如裝著水泥的箱子,如果是要靠人力搬運的話,不僅會造成工作效率的減少,也會使搬運人員的體力大量消耗,所以討論過後,我們小組決定設計”省力搬運機”,不僅解決搬運問題,也大幅地提高工作效率與人員體力的損耗。</p>
+<br />stage1 << <a href='stage1.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
         
     <!-- footer -->
       <div class="container">
