--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -40,8 +40,9 @@
 <p><b></b></p>
 <p><b>主題簡述:</b></p>
 <p><b>因為對汽車作動原理有些許興趣，所以以引擎 的活塞與皮帶輪關係做變化。 </b></p>
-<p><b></b></p><h3>stage2</h3>
-<p>bg12</p>
+<p><b></b></p>
+<h3>stage2</h3>
+<p><span style="color: #ff0000;">bg12</span></p>
 <p>專題主題:<span>自動門</span><span>開門機構</span></p>
 <p>組員/分工:</p>
 <p>40823221/<span>網頁編輯、程式模擬、PDF簡報製作</span></p>
@@ -51,7 +52,7 @@
 <p><br/>主題簡述:</p>
 <p>剛開始會想做項專題的原因是因為在去 年發生了全世界的病毒感染，所以我們 想過類似門或是其他需要人體接觸的地 方盡量能讓人不用用手碰觸。 後來會做此設計也有對接觸做設計，所 以我們將感應器裝在門的周圍，是他可 以自動開啟。</p>
 <p>---------------------------------------</p>
-<p>bg14</p>
+<p><span style="color: #ff0000;">bg14</span></p>
 <p>專題主題:<strong>省力搬運機</strong></p>
 <p>組員/分工:</p>
 <p>40823204/SolidWorks 零件繪製、模擬、報告影片</p>
@@ -60,4 +61,6 @@
 <p>40832228/<span>PDF 製作、模擬、報告影片</span></p>
 <p><span>40823242/應力分析、模擬、報告影片</span></p>
 <p><br/>主題簡述:</p>
-<p>在工地裡,經常需要用到台車搬運東西,例如裝著水泥的箱子,如果是要靠人力搬運的話,不僅會造成工作效率的減少,也會使搬運人員的體力大量消耗,所以討論過後,我們小組決定設計”省力搬運機”,不僅解決搬運問題,也大幅地提高工作效率與人員體力的損耗。</p><h2>w10</h2>
+<p>在工地裡,經常需要用到台車搬運東西,例如裝著水泥的箱子,如果是要靠人力搬運的話,不僅會造成工作效率的減少,也會使搬運人員的體力大量消耗,所以討論過後,我們小組決定設計”省力搬運機”,不僅解決搬運問題,也大幅地提高工作效率與人員體力的損耗。</p>
+<h2>w10</h2>
+<h1>影片</h1>
