--- a/content/stage1.html
+++ b/content/stage1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html>
         <head>
-        <title>CMSiMDE</title>
+        <title>stage3-bg5</title>
         <meta charset="utf-8">
 <meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li class='has-children'><a href='w9.html'>w9</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></ul><li><a href='w10.html'>w10</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li class='has-children'><a href='w9.html'>w9</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></ul><li><a href='w10.html'>w10</a></li></ul><li><a href='影片.html'>影片</a></li>
                       </ul>
                 </nav>
               </div>
@@ -161,7 +161,8 @@ img.add_border {
 <p><b></b></p>
 <p><b>主題簡述:</b></p>
 <p><b>因為對汽車作動原理有些許興趣，所以以引擎 的活塞與皮帶輪關係做變化。 </b></p>
-<p><b></b></p><br />w9 << <a href='w9.html'>Previous</a> <a href='stage2.html'>Next</a> >> stage2</div>
+<p><b></b></p>
+<br />w9 << <a href='w9.html'>Previous</a> <a href='stage2.html'>Next</a> >> stage2</div>
         
     <!-- footer -->
       <div class="container">
