--- a/content/w10.html
+++ b/content/w10.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html>
         <head>
-        <title>CMSiMDE</title>
+        <title>stage3-bg5</title>
         <meta charset="utf-8">
 <meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li class='has-children'><a href='w9.html'>w9</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></ul><li><a href='w10.html'>w10</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li class='has-children'><a href='w9.html'>w9</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></ul><li><a href='w10.html'>w10</a></li></ul><li><a href='影片.html'>影片</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,7 +134,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">stage2 << <a href='stage2.html'>Previous</a> <br /><h1>w10</h1><br />stage2 << <a href='stage2.html'>Previous</a> </div>
+    <div id="tipue_search_content">stage2 << <a href='stage2.html'>Previous</a> <a href='影片.html'>Next</a> >> 影片<br /><h1>w10</h1>
+<br />stage2 << <a href='stage2.html'>Previous</a> <a href='影片.html'>Next</a> >> 影片</div>
         
     <!-- footer -->
       <div class="container">
