--- a/content/影片.html
+++ b/content/影片.html
@@ -136,7 +136,10 @@ img.add_border {
         </header>
     <div id="tipue_search_content">w11 << <a href='w11.html'>Previous</a> <br /><h1>影片</h1>
 <p>ipv4連線操作影片</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/PjEUfUmZVoQ" width="560"></iframe></p><br />w11 << <a href='w11.html'>Previous</a> </div>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/PjEUfUmZVoQ" width="560"></iframe></p>
+<p><b>---------------------------------------</b></p>
+<p>直播的影片</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T2CSmVCGPLk" width="560"></iframe></p><br />w11 << <a href='w11.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
