--- a/config/content.htm
+++ b/config/content.htm
@@ -39,7 +39,16 @@
 <p><b>40823237/<span>繪製圖檔、reveal製作、倉儲推送及維護</span></b></p>
 <p><b></b></p>
 <p><b>主題簡述:</b></p>
-<p><b>因為對汽車作動原理有些許興趣，所以以引擎 的活塞與皮帶輪關係做變化。 </b></p>
+<p><b>因為對汽車作動原理有些許興趣，所以以引擎 的活塞與皮帶輪關係做變化。</b></p>
+<p><b>---------------------------------------</b></p>
+<p><span style="color: #ff0000;"><b>bg11</b></span></p>
+<p><b>專題主題:鋼板滑車</b></p>
+<p><b>組員/分工:</b></p>
+<p><b>40823205/零件繪製及組裝、PDF製作</b></p>
+<p><b>40823239/倉儲推送及維護、reveal簡報</b></p>
+<p><b></b></p>
+<p><b>主題簡述:</b></p>
+<p><b><span>工業上需要提起重物的地方很多，這種時候使用鋼板滑車，能夠更加省力的舉起重物</span></b></p>
 <p><b></b></p>
 <h3>stage2</h3>
 <p><span style="color: #ff0000;">bg12</span></p>
