--- a/content/影片.html
+++ b/content/影片.html
@@ -139,7 +139,8 @@ img.add_border {
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/PjEUfUmZVoQ" width="560"></iframe></p>
 <p><b>---------------------------------------</b></p>
 <p>直播的影片</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T2CSmVCGPLk" width="560"></iframe></p><br />w11 << <a href='w11.html'>Previous</a> </div>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T2CSmVCGPLk" width="560"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/7dUx6LlgXMI" width="560"></iframe></p><br />w11 << <a href='w11.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
