--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -78,3 +78,4 @@
 <p><b>---------------------------------------</b></p>
 <p>直播的影片</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T2CSmVCGPLk" width="560"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/7dUx6LlgXMI" width="560"></iframe></p>
