--- a/config/content.htm
+++ b/config/content.htm
@@ -49,7 +49,17 @@
 <p><b></b></p>
 <p><b>主題簡述:</b></p>
 <p><b>對於重物的搬運相當耗時，幫助在有需要的工作上。<br/></b></p>
-<p><b>---------------------------------------</b></p><h3>stage2</h3>
+<p><b>---------------------------------------</b></p>
+<p><span style="color: #ff0000;"><b>bg11</b></span></p>
+<p><b>專題主題:鋼板滑車</b><b><br/></b></p>
+<p><b>組員/分工:</b></p>
+<p><b>40823205/零件繪製及組裝、PDF製作</b></p>
+<p><b>40823239/倉儲推送及維護、reveal簡報</b></p>
+<p><b></b></p>
+<p><b>主題簡述:</b></p>
+<p><b>工業上需要提起重物的地方很多，這種時候使用鋼板滑車，能夠更加省力的舉起重物。</b></p>
+<p><b>---------------------------------------</b></p>
+<h3>stage2</h3>
 <p><span style="color: #ff0000;">bg12</span></p>
 <p>專題主題:<span>自動門</span><span>開門機構</span></p>
 <p>組員/分工:</p>
