--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -49,7 +49,17 @@
 <p><b></b></p>
 <p><b>主題簡述:</b></p>
 <p><b>對於重物的搬運相當耗時，幫助在有需要的工作上。<br/></b></p>
-<p><b>---------------------------------------</b></p><h3>stage2</h3>
+<p><b>---------------------------------------</b></p>
+<p><span style="color: #ff0000;"><b>bg11</b></span></p>
+<p><b>專題主題:鋼板滑車</b><b><br/></b></p>
+<p><b>組員/分工:</b></p>
+<p><b>40823205/零件繪製及組裝、PDF製作</b></p>
+<p><b>40823239/倉儲推送及維護、reveal簡報</b></p>
+<p><b></b></p>
+<p><b>主題簡述:</b></p>
+<p><b>工業上需要提起重物的地方很多，這種時候使用鋼板滑車，能夠更加省力的舉起重物。</b></p>
+<p><b>---------------------------------------</b></p>
+<h3>stage2</h3>
 <p><span style="color: #ff0000;">bg12</span></p>
 <p>專題主題:<span>自動門</span><span>開門機構</span></p>
 <p>組員/分工:</p>
@@ -71,6 +81,11 @@
 <p><br/>主題簡述:</p>
 <p>在工地裡,經常需要用到台車搬運東西,例如裝著水泥的箱子,如果是要靠人力搬運的話,不僅會造成工作效率的減少,也會使搬運人員的體力大量消耗,所以討論過後,我們小組決定設計”省力搬運機”,不僅解決搬運問題,也大幅地提高工作效率與人員體力的損耗。</p>
 <h2>w11</h2>
+<h2>W12 </h2>
+<h2>W13 機械手臂控制、程式控制攀爬機</h2>
+<p>檔案下載:</p>
+<p>模擬影片:</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/-IUVghi0gbQ" width="560"></iframe></p>
 <h1>影片</h1>
 <p>ipv4連線操作影片</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/PjEUfUmZVoQ" width="560"></iframe></p>
@@ -78,4 +93,4 @@
 <p>直播的影片</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T2CSmVCGPLk" width="560"></iframe></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/7dUx6LlgXMI" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/sm5dSwAz2Z4" title="YouTube video player" width="560"></iframe></p>
+<br/><br/><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/sm5dSwAz2Z4" title="YouTube video player" width="560"></iframe>
