--- a/content/影片.html
+++ b/content/影片.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></ul><li><a href='w11.html'>w11</a></li></ul><li><a href='影片.html'>影片</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></ul><li><a href='w11.html'>w11</a><li><a href='W12.html'>W12</a><li><a href='W13 機械手臂控制、程式控制攀爬機.html'>W13 機械手臂控制、程式控制攀爬機</a></li></ul><li><a href='影片.html'>影片</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,14 +134,14 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w11 << <a href='w11.html'>Previous</a> <br /><h1>影片</h1>
+    <div id="tipue_search_content">W13 機械手臂控制、程式控制攀爬機 << <a href='W13 機械手臂控制、程式控制攀爬機.html'>Previous</a> <br /><h1>影片</h1>
 <p>ipv4連線操作影片</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/PjEUfUmZVoQ" width="560"></iframe></p>
 <p><b>---------------------------------------</b></p>
 <p>直播的影片</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T2CSmVCGPLk" width="560"></iframe></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/7dUx6LlgXMI" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/sm5dSwAz2Z4" title="YouTube video player" width="560"></iframe></p><br />w11 << <a href='w11.html'>Previous</a> </div>
+<p><br/><br/><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/sm5dSwAz2Z4" title="YouTube video player" width="560"></iframe></p><br />W13 機械手臂控制、程式控制攀爬機 << <a href='W13 機械手臂控制、程式控制攀爬機.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
