--- a/content/w10.html
+++ b/content/w10.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></ul><li><a href='w11.html'>w11</a></li></ul><li><a href='影片.html'>影片</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></ul><li><a href='w11.html'>w11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a></li></ul><li class='has-children'><a href='task2.html'>task2</a><ul class='dropdown'><li><a href='BG1.html'>BG1</a><li><a href='BG2.html'>BG2</a><li><a href='BG3.html'>BG3</a></li>
                       </ul>
                 </nav>
               </div>
@@ -136,6 +136,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">每周進度 << <a href='每周進度.html'>Previous</a> <a href='stage1.html'>Next</a> >> stage1<br /><h1>w10</h1>
 <p><span style="color: #ff0000;">資料整理</span></p>
+<h4></h4>
 <br />每周進度 << <a href='每周進度.html'>Previous</a> <a href='stage1.html'>Next</a> >> stage1</div>
         
     <!-- footer -->
