--- a/content/w11.html
+++ b/content/w11.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></ul><li><a href='w11.html'>w11</a></li></ul><li><a href='影片.html'>影片</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li class='has-children'><a href='w10.html'>w10</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></ul><li><a href='w11.html'>w11</a><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a><li><a href='w14.html'>w14</a></li></ul><li class='has-children'><a href='task2.html'>task2</a><ul class='dropdown'><li><a href='BG1.html'>BG1</a><li><a href='BG2.html'>BG2</a><li><a href='BG3.html'>BG3</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,8 +134,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">stage2 << <a href='stage2.html'>Previous</a> <a href='影片.html'>Next</a> >> 影片<br /><h1>w11</h1>
-<br />stage2 << <a href='stage2.html'>Previous</a> <a href='影片.html'>Next</a> >> 影片</div>
+    <div id="tipue_search_content">stage2 << <a href='stage2.html'>Previous</a> <a href='w12.html'>Next</a> >> w12<br /><h1>w11</h1>
+<p><strong>4月29討論結果</strong><br/><strong>主題:暫定<span>飛機或是汽車等之後再更改</span></strong></p>
+<p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qo33Pq-pSV8" width="560"></iframe></strong></p>
+<br />stage2 << <a href='stage2.html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
         
     <!-- footer -->
       <div class="container">
