--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -76,13 +76,22 @@
 <p><strong>4月29討論結果</strong><br/><strong>主題:暫定<span>飛機或是汽車等之後再更改</span></strong></p>
 <p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qo33Pq-pSV8" width="560"></iframe></strong></p>
 <h2>w12</h2>
+<p>1.<strong>stage3主題:無障礙越野車</strong></p>
+<p>2.動機:想要一台可以克服各種障礙地形的車子</p>
+<p>3.繪圖者:40823220</p>
+<p>4.機構:利用萬向接頭帶動蝸桿蝸輪</p>
+<p>5.想法:前後輪用雙向馬達驅動，萬象接頭用單向馬達，材料採中空鋁件設計使整體更輕，上面設置供電器</p>
+<p><img alt="" height="258" src="/images/無障礙越野車5.png" width="525"/></p>
+<p><img alt="" height="257" src="/images/無障礙越野車6.png" width="525"/></p>
+<p><img alt="" height="259" src="/images/無障礙越野車7.png" width="525"/></p>
+<p><img alt="" height="256" src="/images/無障礙越野車8.png" width="525"/></p>
+<p>----------------------------------------------------------------------------------------------------</p>
 <p>上課直播</p>
 <p><span>40823221 40823237</span><br/><span>主題: ipv4操作api</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T2CSmVCGPLk" width="560"></iframe></span></p>
 <p><span></span></p>
 <p><span>40823220 40823250<br/><span>主題:Task2、ipv4講解、作品的圖檔進度及講解和參考資料</span></span></p>
-<p><span><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/7dUx6LlgXMI" width="560"></iframe></span></span></p>
-<h2>w13</h2>
+<p><span><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/7dUx6LlgXMI" width="560"></iframe></span></span></p><h2>w13</h2>
 <p>上課直播</p>
 <p>40823205 40823228</p>
 <p>主題:解決CMSIMDE版本錯誤</p>
@@ -201,10 +210,10 @@ else:
     print ('End')</pre>
 <p></p>
 <p><span style="background-color: #ffff00;"></span></p><h2>BG2</h2>
-<p><span>stage2-bg12</span></p>
+<p><span style="background-color: #ffff00;">stage2-bg12</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/MsF1WQpAa04" width="560"></iframe></span></p>
 <p><span></span></p>
-<p><span>stage2-bg14</span></p>
+<p><span style="background-color: #ffff00;">stage2-bg14</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/H0m3scUj7iM" width="560"></iframe></span></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">import sim as vrep
 import math
