--- a/config/content.htm
+++ b/config/content.htm
@@ -76,21 +76,41 @@
 <p><strong>4月29討論結果</strong><br/><strong>主題:暫定<span>飛機或是汽車等之後再更改</span></strong></p>
 <p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qo33Pq-pSV8" width="560"></iframe></strong></p>
 <h2>w12</h2>
+<p>1.<strong>stage3主題:無障礙越野車</strong></p>
+<p>2.動機:想要一台可以克服各種障礙地形的車子</p>
+<p>3.繪圖者:40823220</p>
+<p>4.機構:利用萬向接頭帶動蝸桿蝸輪</p>
+<p>5.想法:前後輪用雙向馬達驅動，萬象接頭用單向馬達，材料採中空鋁件設計使整體更輕，上面設置供電器</p>
+<p><img alt="" height="258" src="/images/無障礙越野車5.png" width="525"/></p>
+<p><img alt="" height="257" src="/images/無障礙越野車6.png" width="525"/></p>
+<p><img alt="" height="259" src="/images/無障礙越野車7.png" width="525"/></p>
+<p><img alt="" height="256" src="/images/無障礙越野車8.png" width="525"/></p>
+<p>----------------------------------------------------------------------------------------------------</p>
 <p>上課直播</p>
 <p><span>40823221 40823237</span><br/><span>主題: ipv4操作api</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T2CSmVCGPLk" width="560"></iframe></span></p>
 <p><span></span></p>
 <p><span>40823220 40823250<br/><span>主題:Task2、ipv4講解、作品的圖檔進度及講解和參考資料</span></span></p>
-<p><span><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/7dUx6LlgXMI" width="560"></iframe></span></span></p>
-<h2>w13</h2>
+<p><span><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/7dUx6LlgXMI" width="560"></iframe></span></span></p><h2>w13</h2>
+<p>本週主要為零件、產品大改良</p>
+<p>零件檔載點:<a href="https://40823220.github.io/cd2021/downloads/Desktop.rar">零件檔</a></p>
+<p>更進如下:</p>
+<p>1.輪胎加大，紋路朝前，為了讓摩擦力增加</p>
+<p><img alt="" height="269" src="/images/輪胎加大.png" width="525"/></p>
+<p><span>2.將單向馬達架高，直接驅動蝸桿蝸輪，省略多餘的萬象接頭，使模擬更容易</span></p>
+<p><span><img alt="" height="269" src="/images/單向馬達架高.png" width="525"/></span></p>
+<p>3.輪軸加大，使模擬安插軸更容易</p>
+<p>4.更改底板，因應前面所有改動，底板必須符合邏輯的變化</p>
+<p><img alt="" height="269" src="/images/更改底板.png" width="525"/></p>
+<p><span>5.將不動零件合併化，原本14件縮減到6件，使模擬大幅度容易</span></p>
+<p><span>----------------------------------------------------------------------------------------------------</span></p>
 <p>上課直播</p>
 <p>40823205 40823228</p>
 <p>主題:解決CMSIMDE版本錯誤</p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T2CSmVCGPLk" width="560"></iframe></span></p>
 <p><span>40823220 40823250</span></p>
 <p><span>主題:介紹inventor及 reveal教學</span></p>
-<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/9L3157sRr2U" width="560"></iframe></span></p>
-<h2>w14</h2>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/9L3157sRr2U" width="560"></iframe></span></p><h2>w14</h2>
 <p>線上同步教學</p>
 <p>第一次直播</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/npptDs_cz78" width="560"></iframe></p>
