--- a/content/w13.html
+++ b/content/w13.html
@@ -135,14 +135,25 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w12 << <a href='w12.html'>Previous</a> <a href='w14.html'>Next</a> >> w14<br /><h1>w13</h1>
+<p>本週主要為零件、產品大改良</p>
+<p>零件檔載點:<a href="https://40823220.github.io/cd2021/downloads/Desktop.rar">零件檔</a></p>
+<p>更進如下:</p>
+<p>1.輪胎加大，紋路朝前，為了讓摩擦力增加</p>
+<p><img alt="" height="269" src="./../images/輪胎加大.png" width="525"/></p>
+<p><span>2.將單向馬達架高，直接驅動蝸桿蝸輪，省略多餘的萬象接頭，使模擬更容易</span></p>
+<p><span><img alt="" height="269" src="./../images/單向馬達架高.png" width="525"/></span></p>
+<p>3.輪軸加大，使模擬安插軸更容易</p>
+<p>4.更改底板，因應前面所有改動，底板必須符合邏輯的變化</p>
+<p><img alt="" height="269" src="./../images/更改底板.png" width="525"/></p>
+<p><span>5.將不動零件合併化，原本14件縮減到6件，使模擬大幅度容易</span></p>
+<p><span>----------------------------------------------------------------------------------------------------</span></p>
 <p>上課直播</p>
 <p>40823205 40823228</p>
 <p>主題:解決CMSIMDE版本錯誤</p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T2CSmVCGPLk" width="560"></iframe></span></p>
 <p><span>40823220 40823250</span></p>
 <p><span>主題:介紹inventor及 reveal教學</span></p>
-<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/9L3157sRr2U" width="560"></iframe></span></p>
-<br />w12 << <a href='w12.html'>Previous</a> <a href='w14.html'>Next</a> >> w14</div>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/9L3157sRr2U" width="560"></iframe></span></p><br />w12 << <a href='w12.html'>Previous</a> <a href='w14.html'>Next</a> >> w14</div>
         
     <!-- footer -->
       <div class="container">
