小組作品w12-15內容"

--- a/config/content.htm
+++ b/config/content.htm
@@ -9,8 +9,22 @@
 <p><a href="https://github.com/40823242/cd2021">40823242 repo</a>/<a href="https://40823242.github.io/cd2021/content/index.html">40823242 site</a></p>
 <p><a href="https://github.com/40823250/cd2021">40823250 repo</a>/<a href="https://40823250.github.io/cd2021/content/index.html">40823250 site</a></p>
 <p><a href="https://github.com/40832244/cd2021">40832244 repo</a>/<a href="https://40832244.github.io/cd2021/content/index.html">40832244 site</a></p>
-<p></p>
-<h1>每周進度</h1>
+<h1>stage3</h1>
+<h2>w12-13</h2>
+<p>小組作品進度</p>
+<p>使用coppeliasim做初步模擬+lua控制</p>
+<p>說明:在場景中做初步的零件連接，並利用lua控制車子前進，但因為連接軸的問題，車子目前只能做前後移動和上下調整角度</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/1p7-JPmSXnQ" title="YouTube video player" width="560"></iframe></p>
+<h2>w14</h2>
+<p>作品進度:將車子的連接方式改變，使其能夠轉彎</p>
+<p>因為原本車子輪胎是前後輪為一體的，為了不再修改圖面，使用coppeliasim內建功能toggle shape edit mode,把四個輪胎分開後並分別接上各個連接軸</p>
+<p>原先車子前後輪連接形式</p>
+<p><img alt="" height="200" src="/images/coppeliaSim_qWmoBt5ycG.png" width="300"/></p>
+<p>修改後之圖片</p>
+<p><img alt="" height="200" src="/images/coppeliaSim_XRVj15bLQG.png" width="300"/></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/ezSKHlxZ1FI" title="YouTube video player" width="560"></iframe></p><h2>w15</h2>
+<p>作品進度:將程式用lua改為python remote api 控制</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/VkEcGY76lNA" title="YouTube video player" width="560"></iframe></p><h1>每周進度</h1>
 <h2>W10 新增Stage1、2 工作分配</h2>
 <p><span style="color: #ff0000;">資料整理</span></p>
 <h4></h4>
@@ -162,7 +176,7 @@
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/npptDs_cz78" width="560"></iframe></p>
 <p><span>第二次直播</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/SOV4d6DmCEs" width="560"></iframe></span></p>
-<h2><span>W15 </span></h2>
+<h2>W15</h2>
 <p>上課直播影片</p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/mDPnTY_19A0" width="560"></iframe></span></p>
 <h1>Task2</h1>
