--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -9,8 +9,20 @@
 <p><a href="https://github.com/40823242/cd2021">40823242 repo</a>/<a href="https://40823242.github.io/cd2021/content/index.html">40823242 site</a></p>
 <p><a href="https://github.com/40823250/cd2021">40823250 repo</a>/<a href="https://40823250.github.io/cd2021/content/index.html">40823250 site</a></p>
 <p><a href="https://github.com/40832244/cd2021">40832244 repo</a>/<a href="https://40832244.github.io/cd2021/content/index.html">40832244 site</a></p>
-<p></p>
-<h1>每周進度</h1>
+<h1>stage3</h1>
+<h2>w12-13</h2>
+<p>小組作品進度</p>
+<p>使用coppeliasim做初步模擬+lua控制</p>
+<p>說明:在場景中做初步的零件連接，並利用lua控制車子前進，但因為連接軸的問題，車子目前只能做前後移動和上下調整角度</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/1p7-JPmSXnQ" title="YouTube video player" width="560"></iframe></p>
+<h2>w14</h2>
+<p>作品進度:將車子的連接方式改變，使其能夠轉彎</p>
+<p>因為原本車子輪胎是前後輪為一體的，為了不再修改圖面，使用coppeliasim內建功能toggle shape edit mode,把四個輪胎分開後並分別接上各個連接軸</p>
+<p>原先車子前後輪連接形式</p>
+<p><img alt="" height="200" src="/images/coppeliaSim_qWmoBt5ycG.png" width="300"/></p>
+<p>修改後之圖片</p>
+<p><img alt="" height="200" src="/images/coppeliaSim_XRVj15bLQG.png" width="300"/></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/ezSKHlxZ1FI" title="YouTube video player" width="560"></iframe></p><h2>w15</h2><h1>每周進度</h1>
 <h2>W10 新增Stage1、2 工作分配</h2>
 <p><span style="color: #ff0000;">資料整理</span></p>
 <h4></h4>
@@ -106,6 +118,8 @@
 <p>修改完成使零件數目減少後，使攀爬機在CoppeliaSim中可以順利完成地形攀爬模擬。</p>
 <p>模擬影片:</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/-IUVghi0gbQ" width="560"></iframe></p>
+<h2>W14</h2>
+<h2>W15</h2>
 <h1>影片</h1>
 <p>ipv4連線操作影片</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/PjEUfUmZVoQ" width="560"></iframe></p>
@@ -117,7 +131,7 @@
 <p>=======</p>
 <p><strong>4月29討論結果</strong><br/><strong>主題:暫定<span>飛機或是汽車等之後再更改</span></strong></p>
 <p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qo33Pq-pSV8" width="560"></iframe></strong></p>
-<h2>w12</h2>
+<h2>W12</h2>
 <p>1.<strong>stage3主題:無障礙越野車</strong></p>
 <p>2.動機:想要一台可以克服各種障礙地形的車子</p>
 <p>3.繪圖者:40823220</p>
@@ -134,7 +148,7 @@
 <p><span></span></p>
 <p><span>40823220 40823250<br/><span>主題:Task2、ipv4講解、作品的圖檔進度及講解和參考資料</span></span></p>
 <p><span><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/7dUx6LlgXMI" width="560"></iframe></span></span></p>
-<h2>w13</h2>
+<h2>W13</h2>
 <p>本週主要為零件、產品大改良</p>
 <p>零件檔載點:<a href="https://40823220.github.io/cd2021/downloads/Desktop.rar">零件檔</a></p>
 <p>更進如下:</p>
@@ -154,13 +168,15 @@
 <p><span>40823220 40823250</span></p>
 <p><span>主題:介紹inventor及 reveal教學</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/9L3157sRr2U" width="560"></iframe></span></p>
-<h2>w14</h2>
+<h2>W14</h2>
 <p>線上同步教學</p>
 <p>第一次直播</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/npptDs_cz78" width="560"></iframe></p>
 <p><span>第二次直播</span></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/SOV4d6DmCEs" width="560"></iframe></span></p>
-<h2><span>W15 </span></h2>
+<h2>W15</h2>
+<p>上課直播影片</p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/mDPnTY_19A0" width="560"></iframe></span></p>
 <h1>Task2</h1>
 <h2>Stage 1</h2>
 <p><span style="background-color: #ffff00;">stage1-bg14<span style="background-color: #ffff00;"></span></span></p>
