--- a/content/stage3.html
+++ b/content/stage3.html
@@ -134,18 +134,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W15-1 << <a href='W15-1.html'>Previous</a> <a href='W12.html'>Next</a> >> W12<br /><h1>影片</h1>
-<p>ipv4連線操作影片</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/PjEUfUmZVoQ" width="560"></iframe></p>
-<p><b>---------------------------------------</b></p>
-<p>直播的影片</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T2CSmVCGPLk" width="560"></iframe></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/7dUx6LlgXMI" width="560"></iframe></p>
-<p><br/><br/><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/sm5dSwAz2Z4" title="YouTube video player" width="560"></iframe></p>
-<p>=======</p>
-<p><strong>4月29討論結果</strong><br/><strong>主題:暫定<span>飛機或是汽車等之後再更改</span></strong></p>
-<p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qo33Pq-pSV8" width="560"></iframe></strong></p>
-<br />W15-1 << <a href='W15-1.html'>Previous</a> <a href='W12.html'>Next</a> >> W12</div>
+    <div id="tipue_search_content">首頁 << <a href='首頁.html'>Previous</a> <a href='w12-13.html'>Next</a> >> w12-13<br /><h1>stage3</h1>
+<br />首頁 << <a href='首頁.html'>Previous</a> <a href='w12-13.html'>Next</a> >> w12-13</div>
         
     <!-- footer -->
       <div class="container">
