增加檔案下載連結和修改網站格式

--- a/content/W14coppelia模擬.html
+++ b/content/W14coppelia模擬.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li><a href='w12-13.html'>w12-13</a><li><a href='w14.html'>w14</a><li><a href='w15.html'>w15</a></li></ul><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li class='has-children'><a href='W10 新增Stage1、2 工作分配.html'>W10 新增Stage1、2 工作分配</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></ul><li><a href='W11 直播影片.html'>W11 直播影片</a><li><a href='W12 直播影片.html'>W12 直播影片</a><li><a href='W13 機械手臂控制、程式控制攀爬機.html'>W13 機械手臂控制、程式控制攀爬機</a><li><a href='W14-1.html'>W14-1</a><li><a href='W15-1.html'>W15-1</a></li></ul><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='W12.html'>W12</a><li><a href='W13.html'>W13</a><li><a href='W14-2.html'>W14-2</a><li><a href='W15-2.html'>W15-2</a></li></ul><li class='has-children'><a href='Task2.html'>Task2</a><ul class='dropdown'><li><a href='Stage 1.html'>Stage 1</a><li><a href='Stage 2.html'>Stage 2</a><li><a href='Stage 3.html'>Stage 3</a></li>
+                     <li><a href='首頁.html'>首頁</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li class='has-children'><a href='W10 新增Stage1、2 工作分配.html'>W10 新增Stage1、2 工作分配</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></ul><li><a href='W11 直播影片.html'>W11 直播影片</a><li><a href='W12 直播影片.html'>W12 直播影片</a><li><a href='W13 機械手臂控制、程式控制攀爬機.html'>W13 機械手臂控制、程式控制攀爬機</a><li><a href='W12-13coppelia模擬.html'>W12-13coppelia模擬</a><li><a href='W14coppelia模擬.html'>W14coppelia模擬</a><li><a href='W15coppelia模擬.html'>W15coppelia模擬</a></li></ul><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='W12.html'>W12</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a></li></ul><li class='has-children'><a href='Task2.html'>Task2</a><ul class='dropdown'><li><a href='Stage 1.html'>Stage 1</a><li><a href='Stage 2.html'>Stage 2</a><li><a href='Stage 3.html'>Stage 3</a></li></ul><li><a href='筆記.html'>筆記</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,8 +134,15 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W14-1 << <a href='W14-1.html'>Previous</a> <a href='影片.html'>Next</a> >> 影片<br /><h1>W15-1</h1>
-<br />W14-1 << <a href='W14-1.html'>Previous</a> <a href='影片.html'>Next</a> >> 影片</div>
+    <div id="tipue_search_content">W12-13coppelia模擬 << <a href='W12-13coppelia模擬.html'>Previous</a> <a href='W15coppelia模擬.html'>Next</a> >> W15coppelia模擬<br /><h1>W14coppelia模擬</h1>
+<p>作品進度:將車子的連接方式改變，使其能夠轉彎</p>
+<p>因為原本車子輪胎是前後輪為一體的，為了不再修改圖面，使用coppeliasim內建功能toggle shape edit mode,把四個輪胎分開後並分別接上各個連接軸</p>
+<p>原先車子前後輪連接形式</p>
+<p><img alt="" height="200" src="./../images/coppeliaSim_qWmoBt5ycG.png" width="300"/></p>
+<p>修改後之圖片</p>
+<p><img alt="" height="200" src="./../images/coppeliaSim_XRVj15bLQG.png" width="300"/></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/ezSKHlxZ1FI" title="YouTube video player" width="560"></iframe></p>
+<br />W12-13coppelia模擬 << <a href='W12-13coppelia模擬.html'>Previous</a> <a href='W15coppelia模擬.html'>Next</a> >> W15coppelia模擬</div>
         
     <!-- footer -->
       <div class="container">
