--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -9,22 +9,124 @@
 <p><a href="https://github.com/40823242/cd2021">40823242 repo</a>/<a href="https://40823242.github.io/cd2021/content/index.html">40823242 site</a></p>
 <p><a href="https://github.com/40823250/cd2021">40823250 repo</a>/<a href="https://40823250.github.io/cd2021/content/index.html">40823250 site</a></p>
 <p><a href="https://github.com/40832244/cd2021">40832244 repo</a>/<a href="https://40832244.github.io/cd2021/content/index.html">40832244 site</a></p>
-<h1>stage3</h1>
-<h2>w12-13</h2>
+<h1>每周進度</h1>
+<h2>W10 新增Stage1、2 工作分配</h2>
+<p><span style="color: #ff0000;">資料整理</span></p>
+<h4></h4>
+<h3>stage1</h3>
+<p><span style="color: #ff0000;"><strong>bg14</strong></span></p>
+<p>專題主題:<b>升降平台</b></p>
+<p><b>組員/分工:</b></p>
+<p><b>40823228/成品零件繪製、模擬、報告影片</b></p>
+<p><b>40823242/初稿零件繪製、模擬、報告影片</b></p>
+<p><b></b></p>
+<p><b>主題簡述:</b></p>
+<p><b>在工地裡，經常需要在高處實施作業，可是 目前在外面看到的作業平台都是用組裝式 的，不僅延長工作時間，在搭建過程，也有 極大的掉落風險，所以我們小組設計出”油 壓式升降平台”，不僅方便攜帶，也大幅減 少風險與搭建平台的作業時間。</b></p>
+<p><b>---------------------------------------</b></p>
+<p><span style="color: #ff0000;"><strong>bg24</strong></span></p>
+<p><b>專題主題:升降裝置</b></p>
+<p><b>組員/分工:</b></p>
+<p><b>40823204/CoppeliaSim 測試、分組網站、PDF 製 作、reveal 簡報</b></p>
+<p><b>40823220/繪圖(Inventor)、reveal 簡報 </b></p>
+<p><b></b></p>
+<p><b>主題簡述:</b></p>
+<p><b>方便搬運重物：大型可用來載人、小型可用在各 種自動化機械。</b></p>
+<p><b>---------------------------------------</b></p>
+<p><span style="color: #ff0000;"><b>bg16</b></span></p>
+<p><b>專題主題:氣動馬達</b></p>
+<p><b>組員/分工:</b></p>
+<p><b>40823221/<span>Coppelia模擬、PDF製作、合併倉儲及網站</span></b></p>
+<p><b>40823237/<span>繪製圖檔、reveal製作、倉儲推送及維護</span></b></p>
+<p><b></b></p>
+<p><b>主題簡述:</b></p>
+<p><b>因為對汽車作動原理有些許興趣，所以以引擎 的活塞與皮帶輪關係做變化。</b></p>
+<p><b>---------------------------------------</b></p>
+<p><span style="color: #ff0000;"><b>bg17</b></span></p>
+<p><b>專題主題:挖土機<br/></b></p>
+<p><b>組員/分工:</b></p>
+<p><b>40832244/<span>Coppelia模擬、PDF製作、合併倉儲及網站</span></b></p>
+<p><b>40823250/<span>繪製圖檔、reveal製作、倉儲推送及維護</span></b></p>
+<p><b></b></p>
+<p><b>主題簡述:</b></p>
+<p><b>對於重物的搬運相當耗時，幫助在有需要的工作上。<br/></b></p>
+<p><b>---------------------------------------</b></p>
+<p><span style="color: #ff0000;"><b>bg11</b></span></p>
+<p><b>專題主題:鋼板滑車</b><b><br/></b></p>
+<p><b>組員/分工:</b></p>
+<p><b>40823205/零件繪製及組裝、PDF製作</b></p>
+<p><b>40823239/倉儲推送及維護、reveal簡報</b></p>
+<p><b></b></p>
+<p><b>主題簡述:</b></p>
+<p><b>工業上需要提起重物的地方很多，這種時候使用鋼板滑車，能夠更加省力的舉起重物。</b></p>
+<p><b>---------------------------------------</b></p>
+<h3>stage2</h3>
+<p><span style="color: #ff0000;">bg12</span></p>
+<p>專題主題:<span>自動門</span><span>開門機構</span></p>
+<p>組員/分工:</p>
+<p>40823221/<span>網頁編輯、程式模擬、PDF簡報製作</span></p>
+<p>40823237/<span>繪製圖檔、程式模擬、Reveal製作</span></p>
+<p>40823250/<span>繪製圖檔、網頁編輯</span></p>
+<p>40832244/<span>網頁編輯</span></p>
+<p><br/>主題簡述:</p>
+<p>剛開始會想做項專題的原因是因為在去 年發生了全世界的病毒感染，所以我們 想過類似門或是其他需要人體接觸的地 方盡量能讓人不用用手碰觸。 後來會做此設計也有對接觸做設計，所 以我們將感應器裝在門的周圍，是他可 以自動開啟。</p>
+<p>---------------------------------------</p>
+<p><span style="color: #ff0000;">bg14</span></p>
+<p>專題主題:<strong>省力搬運機</strong></p>
+<p>組員/分工:</p>
+<p>40823204/SolidWorks 零件繪製、模擬、報告影片</p>
+<p>40823205/Inventor 零件繪製、模擬、報告影片</p>
+<p>40823220/<span>Inventor 零件繪製、模擬、報告影片</span></p>
+<p>40832228/<span>PDF 製作、模擬、報告影片</span></p>
+<p><span>40823242/應力分析、模擬、報告影片</span></p>
+<p><br/>主題簡述:</p>
+<p>在工地裡,經常需要用到台車搬運東西,例如裝著水泥的箱子,如果是要靠人力搬運的話,不僅會造成工作效率的減少,也會使搬運人員的體力大量消耗,所以討論過後,我們小組決定設計”省力搬運機”,不僅解決搬運問題,也大幅地提高工作效率與人員體力的損耗。</p>
+<h2>W11 直播影片</h2>
+<p><span>stage3-bg5-40823220 40823250</span><br/><span>主題:Task2、ipv4講解、作品的圖檔進度及講解和參考資料</span><br/><span>20號:圖檔說明</span><br/><span>50號:ipv4講解</span></p>
+<p><span>影片:</span></p>
+<p><span>一.</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/7dUx6LlgXMI" width="560"></iframe></span></p>
+<p><span>二.</span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T2CSmVCGPLk" width="560"></iframe></span></p>
+<h2>W12 直播影片</h2>
+<p><span>stage3-bg5</span><br/><span>40823205、40823228</span><br/><span>主題 : 解決CMSIMDE版本錯誤</span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/sm5dSwAz2Z4" width="560"></iframe></p>
+<h2>W13 機械手臂控制、程式控制攀爬機</h2>
+<p><a href="https://40823220.github.io/cd2021/content/12.html">40823220網站</a></p>
+<p>本週主要為零件、產品大改良</p>
+<p>零件檔載點:<a href="https://40823220.github.io/cd2021/downloads/Desktop.rar">零件檔</a></p>
+<p>更進如下:</p>
+<p>1.輪胎加大，紋路朝前，為了讓摩擦力增加</p>
+<p><img alt="" height="205" src="https://40823220.github.io/cd2021/images/798.bmp" width="400"/></p>
+<p>2.將單向馬達架高，直接驅動蝸桿蝸輪，省略多餘的萬象接頭，使模擬更容易</p>
+<p><img alt="" height="205" src="https://40823220.github.io/cd2021/images/789.bmp" width="400"/></p>
+<p>3.輪軸加大，使模擬安插軸更容易</p>
+<p>4.更改底板，因應前面所有改動，底板必須符合邏輯的變化</p>
+<p><img alt="" height="205" src="https://40823220.github.io/cd2021/images/777.bmp" width="400"/></p>
+<p>修改完成使零件數目減少後，使攀爬機在CoppeliaSim中可以順利完成地形攀爬模擬。</p>
+<p>模擬影片:</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/-IUVghi0gbQ" width="560"></iframe></p>
+<h2>W12-13coppelia模擬</h2>
 <p>小組作品進度</p>
 <p>使用coppeliasim做初步模擬+lua控制</p>
 <p>說明:在場景中做初步的零件連接，並利用lua控制車子前進，但因為連接軸的問題，車子目前只能做前後移動和上下調整角度</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/1p7-JPmSXnQ" title="YouTube video player" width="560"></iframe></p>
-<h2>w14</h2>
+<h2>W14coppelia模擬</h2>
 <p>作品進度:將車子的連接方式改變，使其能夠轉彎</p>
 <p>因為原本車子輪胎是前後輪為一體的，為了不再修改圖面，使用coppeliasim內建功能toggle shape edit mode,把四個輪胎分開後並分別接上各個連接軸</p>
 <p>原先車子前後輪連接形式</p>
 <p><img alt="" height="200" src="/images/coppeliaSim_qWmoBt5ycG.png" width="300"/></p>
 <p>修改後之圖片</p>
 <p><img alt="" height="200" src="/images/coppeliaSim_XRVj15bLQG.png" width="300"/></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/ezSKHlxZ1FI" title="YouTube video player" width="560"></iframe></p><h2>w15</h2>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/ezSKHlxZ1FI" title="YouTube video player" width="560"></iframe></p>
+<h2>W15coppelia模擬</h2>
 <p>作品進度:將程式用lua改為python remote api 控制</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/VkEcGY76lNA" title="YouTube video player" width="560"></iframe></p>
+<p><strong>按鍵指令</strong></p>
+<p>"1-4"控制輪子轉彎方向</p>
+<p>"w" 蝸桿蝸輪控制車體向上</p>
+<p>"d"<span>蝸桿蝸輪控制車體向下</span></p>
+<p>"a"車子向前</p>
+<p><span>"d"車子向前後</span></p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">import sim as vrep
 import sim as vrep
 import math
@@ -130,104 +232,6 @@ if clientID !=-1:
 else:
     print ('Failed connecting to  remote API server')
     print ('End')</pre>
-<p></p><h1>每周進度</h1>
-<h2>W10 新增Stage1、2 工作分配</h2>
-<p><span style="color: #ff0000;">資料整理</span></p>
-<h4></h4>
-<h3>stage1</h3>
-<p><span style="color: #ff0000;"><strong>bg14</strong></span></p>
-<p>專題主題:<b>升降平台</b></p>
-<p><b>組員/分工:</b></p>
-<p><b>40823228/成品零件繪製、模擬、報告影片</b></p>
-<p><b>40823242/初稿零件繪製、模擬、報告影片</b></p>
-<p><b></b></p>
-<p><b>主題簡述:</b></p>
-<p><b>在工地裡，經常需要在高處實施作業，可是 目前在外面看到的作業平台都是用組裝式 的，不僅延長工作時間，在搭建過程，也有 極大的掉落風險，所以我們小組設計出”油 壓式升降平台”，不僅方便攜帶，也大幅減 少風險與搭建平台的作業時間。</b></p>
-<p><b>---------------------------------------</b></p>
-<p><span style="color: #ff0000;"><strong>bg24</strong></span></p>
-<p><b>專題主題:升降裝置</b></p>
-<p><b>組員/分工:</b></p>
-<p><b>40823204/CoppeliaSim 測試、分組網站、PDF 製 作、reveal 簡報</b></p>
-<p><b>40823220/繪圖(Inventor)、reveal 簡報 </b></p>
-<p><b></b></p>
-<p><b>主題簡述:</b></p>
-<p><b>方便搬運重物：大型可用來載人、小型可用在各 種自動化機械。</b></p>
-<p><b>---------------------------------------</b></p>
-<p><span style="color: #ff0000;"><b>bg16</b></span></p>
-<p><b>專題主題:氣動馬達</b></p>
-<p><b>組員/分工:</b></p>
-<p><b>40823221/<span>Coppelia模擬、PDF製作、合併倉儲及網站</span></b></p>
-<p><b>40823237/<span>繪製圖檔、reveal製作、倉儲推送及維護</span></b></p>
-<p><b></b></p>
-<p><b>主題簡述:</b></p>
-<p><b>因為對汽車作動原理有些許興趣，所以以引擎 的活塞與皮帶輪關係做變化。</b></p>
-<p><b>---------------------------------------</b></p>
-<p><span style="color: #ff0000;"><b>bg17</b></span></p>
-<p><b>專題主題:挖土機<br/></b></p>
-<p><b>組員/分工:</b></p>
-<p><b>40832244/<span>Coppelia模擬、PDF製作、合併倉儲及網站</span></b></p>
-<p><b>40823250/<span>繪製圖檔、reveal製作、倉儲推送及維護</span></b></p>
-<p><b></b></p>
-<p><b>主題簡述:</b></p>
-<p><b>對於重物的搬運相當耗時，幫助在有需要的工作上。<br/></b></p>
-<p><b>---------------------------------------</b></p>
-<p><span style="color: #ff0000;"><b>bg11</b></span></p>
-<p><b>專題主題:鋼板滑車</b><b><br/></b></p>
-<p><b>組員/分工:</b></p>
-<p><b>40823205/零件繪製及組裝、PDF製作</b></p>
-<p><b>40823239/倉儲推送及維護、reveal簡報</b></p>
-<p><b></b></p>
-<p><b>主題簡述:</b></p>
-<p><b>工業上需要提起重物的地方很多，這種時候使用鋼板滑車，能夠更加省力的舉起重物。</b></p>
-<p><b>---------------------------------------</b></p>
-<h3>stage2</h3>
-<p><span style="color: #ff0000;">bg12</span></p>
-<p>專題主題:<span>自動門</span><span>開門機構</span></p>
-<p>組員/分工:</p>
-<p>40823221/<span>網頁編輯、程式模擬、PDF簡報製作</span></p>
-<p>40823237/<span>繪製圖檔、程式模擬、Reveal製作</span></p>
-<p>40823250/<span>繪製圖檔、網頁編輯</span></p>
-<p>40832244/<span>網頁編輯</span></p>
-<p><br/>主題簡述:</p>
-<p>剛開始會想做項專題的原因是因為在去 年發生了全世界的病毒感染，所以我們 想過類似門或是其他需要人體接觸的地 方盡量能讓人不用用手碰觸。 後來會做此設計也有對接觸做設計，所 以我們將感應器裝在門的周圍，是他可 以自動開啟。</p>
-<p>---------------------------------------</p>
-<p><span style="color: #ff0000;">bg14</span></p>
-<p>專題主題:<strong>省力搬運機</strong></p>
-<p>組員/分工:</p>
-<p>40823204/SolidWorks 零件繪製、模擬、報告影片</p>
-<p>40823205/Inventor 零件繪製、模擬、報告影片</p>
-<p>40823220/<span>Inventor 零件繪製、模擬、報告影片</span></p>
-<p>40832228/<span>PDF 製作、模擬、報告影片</span></p>
-<p><span>40823242/應力分析、模擬、報告影片</span></p>
-<p><br/>主題簡述:</p>
-<p>在工地裡,經常需要用到台車搬運東西,例如裝著水泥的箱子,如果是要靠人力搬運的話,不僅會造成工作效率的減少,也會使搬運人員的體力大量消耗,所以討論過後,我們小組決定設計”省力搬運機”,不僅解決搬運問題,也大幅地提高工作效率與人員體力的損耗。</p>
-<h2>W11 直播影片</h2>
-<p><span>stage3-bg5-40823220 40823250</span><br/><span>主題:Task2、ipv4講解、作品的圖檔進度及講解和參考資料</span><br/><span>20號:圖檔說明</span><br/><span>50號:ipv4講解</span></p>
-<p><span>影片:</span></p>
-<p><span>一.</span></p>
-<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/7dUx6LlgXMI" width="560"></iframe></span></p>
-<p><span>二.</span></p>
-<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T2CSmVCGPLk" width="560"></iframe></span></p>
-<h2>W12 直播影片</h2>
-<p><span>stage3-bg5</span><br/><span>40823205、40823228</span><br/><span>主題 : 解決CMSIMDE版本錯誤</span></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/sm5dSwAz2Z4" width="560"></iframe></p>
-<h2>W13 機械手臂控制、程式控制攀爬機</h2>
-<p><a href="https://40823220.github.io/cd2021/content/12.html">40823220網站</a></p>
-<p>本週主要為零件、產品大改良</p>
-<p>零件檔載點:<a href="https://40823220.github.io/cd2021/downloads/Desktop.rar">零件檔</a></p>
-<p>更進如下:</p>
-<p>1.輪胎加大，紋路朝前，為了讓摩擦力增加</p>
-<p><img alt="" height="205" src="https://40823220.github.io/cd2021/images/798.bmp" width="400"/></p>
-<p>2.將單向馬達架高，直接驅動蝸桿蝸輪，省略多餘的萬象接頭，使模擬更容易</p>
-<p><img alt="" height="205" src="https://40823220.github.io/cd2021/images/789.bmp" width="400"/></p>
-<p>3.輪軸加大，使模擬安插軸更容易</p>
-<p>4.更改底板，因應前面所有改動，底板必須符合邏輯的變化</p>
-<p><img alt="" height="205" src="https://40823220.github.io/cd2021/images/777.bmp" width="400"/></p>
-<p>修改完成使零件數目減少後，使攀爬機在CoppeliaSim中可以順利完成地形攀爬模擬。</p>
-<p>模擬影片:</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/-IUVghi0gbQ" width="560"></iframe></p>
-<h2>W14</h2>
-<h2>W15</h2>
 <h1>影片</h1>
 <p>ipv4連線操作影片</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/PjEUfUmZVoQ" width="560"></iframe></p>
@@ -474,3 +478,4 @@ else:
 <p></p>
 <h2>Stage 3</h2>
 <p>&gt;&gt;&gt;&gt;&gt;&gt;&gt; e793fcf1540d71475a976f62fa71b3607719897f</p>
+<h1>筆記</h1>
