--- a/content/影片.html
+++ b/content/影片.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='首頁.html'>首頁</a><li class='has-children'><a href='stage3.html'>stage3</a><ul class='dropdown'><li><a href='w12-13.html'>w12-13</a><li><a href='w14.html'>w14</a><li><a href='w15.html'>w15</a></li></ul><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li class='has-children'><a href='W10 新增Stage1、2 工作分配.html'>W10 新增Stage1、2 工作分配</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></ul><li><a href='W11 直播影片.html'>W11 直播影片</a><li><a href='W12 直播影片.html'>W12 直播影片</a><li><a href='W13 機械手臂控制、程式控制攀爬機.html'>W13 機械手臂控制、程式控制攀爬機</a><li><a href='W14-1.html'>W14-1</a><li><a href='W15-1.html'>W15-1</a></li></ul><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='W12.html'>W12</a><li><a href='W13.html'>W13</a><li><a href='W14-2.html'>W14-2</a><li><a href='W15-2.html'>W15-2</a></li></ul><li class='has-children'><a href='Task2.html'>Task2</a><ul class='dropdown'><li><a href='Stage 1.html'>Stage 1</a><li><a href='Stage 2.html'>Stage 2</a><li><a href='Stage 3.html'>Stage 3</a></li>
+                     <li><a href='首頁.html'>首頁</a><li class='has-children'><a href='每周進度.html'>每周進度</a><ul class='dropdown'><li class='has-children'><a href='W10 新增Stage1、2 工作分配.html'>W10 新增Stage1、2 工作分配</a><ul class='dropdown'><li><a href='stage1.html'>stage1</a><li><a href='stage2.html'>stage2</a></li></ul><li><a href='W11 直播影片.html'>W11 直播影片</a><li><a href='W12 直播影片.html'>W12 直播影片</a><li><a href='W13 機械手臂控制、程式控制攀爬機.html'>W13 機械手臂控制、程式控制攀爬機</a><li><a href='W12-13coppelia模擬.html'>W12-13coppelia模擬</a><li><a href='W14coppelia模擬.html'>W14coppelia模擬</a><li><a href='W15coppelia模擬.html'>W15coppelia模擬</a></li></ul><li class='has-children'><a href='影片.html'>影片</a><ul class='dropdown'><li><a href='W12.html'>W12</a><li><a href='W13.html'>W13</a><li><a href='W14.html'>W14</a><li><a href='W15.html'>W15</a></li></ul><li class='has-children'><a href='Task2.html'>Task2</a><ul class='dropdown'><li><a href='Stage 1.html'>Stage 1</a><li><a href='Stage 2.html'>Stage 2</a><li><a href='Stage 3.html'>Stage 3</a></li></ul><li><a href='筆記.html'>筆記</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,7 +134,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W15-1 << <a href='W15-1.html'>Previous</a> <a href='W12.html'>Next</a> >> W12<br /><h1>影片</h1>
+    <div id="tipue_search_content">W15coppelia模擬 << <a href='W15coppelia模擬.html'>Previous</a> <a href='W12.html'>Next</a> >> W12<br /><h1>影片</h1>
 <p>ipv4連線操作影片</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/PjEUfUmZVoQ" width="560"></iframe></p>
 <p><b>---------------------------------------</b></p>
@@ -145,7 +145,7 @@ img.add_border {
 <p>=======</p>
 <p><strong>4月29討論結果</strong><br/><strong>主題:暫定<span>飛機或是汽車等之後再更改</span></strong></p>
 <p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qo33Pq-pSV8" width="560"></iframe></strong></p>
-<br />W15-1 << <a href='W15-1.html'>Previous</a> <a href='W12.html'>Next</a> >> W12</div>
+<br />W15coppelia模擬 << <a href='W15coppelia模擬.html'>Previous</a> <a href='W12.html'>Next</a> >> W12</div>
         
     <!-- footer -->
       <div class="container">
