--- a/content/coppelia啟動教學.html
+++ b/content/coppelia啟動教學.html
@@ -2,6 +2,7 @@
         <head>
         <title>stage3-bg5</title>
         <meta charset="utf-8">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -133,18 +134,16 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='每周進度.html'>Next</a> >> 每周進度<br /><h1>首頁</h1>
-<p>小組成員:</p>
-<p><a href="https://github.com/40823204/cd2021">40823204 repo</a>/<a href="https://40823204.github.io/cd2021/content/index.html">40823204 site</a></p>
-<p><a href="https://github.com/40823205/cd2021">40823205 repo</a>/<a href="https://40823205.github.io/cd2021/content/index.html">40823205 site</a></p>
-<p><a href="https://github.com/40823220/cd2021">40823220 repo</a>/<a href="https://40823220.github.io/cd2021/content/index.html">40823220 site</a></p>
-<p><a href="https://github.com/40823221/cd2021">40823221 repo</a>/<a href="https://40823221.github.io/cd2021/content/index.html">40823221 site</a></p>
-<p><a href="https://github.com/40823228/cd2021">40823228 repo</a>/<a href="https://40823228.github.io/cd2021/content/index.html">40823228 site</a></p>
-<p><a href="https://github.com/40823237/cd2021">40823237 repo</a>/<a href="https://40823237.github.io/cd2021/content/index.html">40823237 site</a></p>
-<p><a href="https://github.com/40823242/cd2021">40823242 repo</a>/<a href="https://40823242.github.io/cd2021/content/index.html">40823242 site</a></p>
-<p><a href="https://github.com/40823250/cd2021">40823250 repo</a>/<a href="https://40823250.github.io/cd2021/content/index.html">40823250 site</a></p>
-<p><a href="https://github.com/40832244/cd2021">40832244 repo</a>/<a href="https://40832244.github.io/cd2021/content/index.html">40832244 site</a></p>
-<br /> <a href='每周進度.html'>Next</a> >> 每周進度</div>
+    <div id="tipue_search_content">筆記 << <a href='筆記.html'>Previous</a> <a href='lua語法和按鍵介紹.html'>Next</a> >> lua語法和按鍵介紹<br /><h1>coppelia啟動教學</h1>
+<p>如何開啟stl檔及基本教學</p>
+<p>1.打開coppeliasim</p>
+<p>2.點選File&gt;Import&gt;Mesh&gt;選擇要打開的檔案</p>
+<p><img alt="" height="200" src="./../images/coppeliaSim_5L815QNqGK.png" width="300"/></p>
+<p>3.出現import options可自行選擇y或z軸&gt;點選import即可叫出檔案</p>
+<p><img alt="" height="300" src="./../images/coppeliaSim_PKtjcHyc4c.png" width="203"/></p>
+<p>4.開啟後場景</p>
+<p><img alt="" height="200" src="./../images/coppeliaSim_IuMvTnVxZk.png" width="300"/></p>
+<br />筆記 << <a href='筆記.html'>Previous</a> <a href='lua語法和按鍵介紹.html'>Next</a> >> lua語法和按鍵介紹</div>
         
     <!-- footer -->
       <div class="container">
